syntax = "proto3";

package estate;

option java_multiple_files = true;
option java_package = "com.example.estate";
option java_outer_classname = "EstateProto";

service EstateProtoService {
  rpc FindEstateInfo(EstateIdRequest) returns (EstateInfoResponse) {}  //zip table의 estateId로 estate table 조회

  rpc GetZipsByAgentId(GetZipsByAgentIdRequest) returns (GetZipsByAgentIdResponse) {}  //중개사 id로 zip 조회
  rpc GetZipDetailBy(GetZipDetailRequest) returns (GetZipDetailResponse) {}  //zipId로 zip 조회
}

message EstateIdRequest {
  string estateId = 1;
}

message EstateInfoResponse {
  string location = 1;
  string estateType = 2;
  string direction = 3;
  int32 totalFloor = 4;
  int32 buildingFloor = 5;
  int32 room = 6;
  int32 toilet = 7;
  string hashtag = 8;
  float m2 = 9;
  string estateId = 10;
}

message GetZipsByAgentIdRequest {
  string agentId = 1;
}

message GetZipsByAgentIdResponse {
  string zipId = 1;
  string attachmentPath = 2;
  string location = 3;
  sint32 buildingFloor = 4;
  string note = 5;
}

message GetZipDetailRequest {
  string zipId = 1;
}

message GetZipDetailResponse {
  string zipId = 1;
  string attachmentPath = 2;
  string location = 3;
  sint32 buildingFloor = 4;
  string note = 5;
  string checkedAt = 6;
  string direction = 7;
  sint32 totalFloor = 8;
  uint64 deposit = 9;
  int64 fee = 10;
  string available = 11;
  string hashtag = 12;
  double m2 = 13;
}